fixed cars-index button alignment and made filters collapsible

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -76,7 +76,27 @@
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
-  cursor:pointer;
+  cursor: pointer;
   overflow: hidden;
   outline: none;
 }
+
+@media (max-width: 500px) {
+
+  .new-item-button{
+    background-color: #004225;
+    background-repeat:no-repeat;
+    border: none;
+    border-radius: 12px;
+    color: #ffffff;
+    margin: 2px;
+    padding: 6px 13px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 14px;
+    cursor: pointer;
+    overflow: hidden;
+    outline: none;
+  }
+ }
